2006-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-21  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-12-18  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.15.

2006-06-26  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.14.3.
	* Rules-quot: New file, from gettext-0.14.3.
	* boldquot.sed: New file, from gettext-0.14.3.
	* en@boldquot.header: New file, from gettext-0.14.3.
	* en@quot.header: New file, from gettext-0.14.3.
	* insert-header.sin: New file, from gettext-0.14.3.
	* quot.sed: New file, from gettext-0.14.3.
	* remove-potcdate.sin: New file, from gettext-0.14.3.
